Make FMLModContainer read and apply Add-Opens and Add-Exports manifest entries from mod files.