@@ -16,13 +16,18 @@ import net.minecraftforge.fml.ModLoadingStage;
 import net.minecraftforge.fml.event.IModBusEvent;
 import net.minecraftforge.forgespi.language.IModInfo;
 import net.minecraftforge.forgespi.language.ModFileScanData;
+import net.minecraftforge.unsafe.UnsafeHacks;
+
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.Marker;
 import org.apache.logging.log4j.MarkerManager;
 
+import cpw.mods.jarhandling.SecureJar;
+
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.Objects;
 import java.util.Optional;
 
@@ -47,12 +52,77 @@ public class FMLModContainer extends ModContainer {
             var moduleName = info.getOwningFile().moduleName();
             var module = gameLayer.findModule(moduleName)
                 .orElseThrow(() -> new IllegalStateException("Failed to find " + moduleName + " in " + gameLayer));
+
+            openModules(gameLayer, module, info.getOwningFile().getFile().getSecureJar());
+
             modClass = Class.forName(module, className);
             LOGGER.debug(LOADING,"Loaded modclass {}/{} with {}", modClass.getModule().getName(), modClass.getName(), modClass.getClassLoader());
         } catch (Throwable e) {
             LOGGER.error(LOADING, "Failed to load class {}", className, e);
             throw new ModLoadingException(info, ModLoadingStage.CONSTRUCT, "fml.modloading.failedtoloadmodclass", e);
         }
+    }
+
+    /**
+     * <pre>
+     * Reads the Add-Exports and Add-Opens attributes (see note) from a mod file and
+     * attempts to apply them. This differers from the JEP in two significant ways:
+     *   1) Instead of opening things to ALL-UNNAMED it instead only opens to the
+     *      mod's module itself. Because I don't want other mods accidently relying
+     *      on transitive behavior
+     *   2) It is read from all mods not just the executable jars.
+     *
+     * From <a href = "https://openjdk.org/jeps/261">JEP 261: Module System</a>
+     *
+     * Two new JDK-specific JAR-file manifest attributes are defined to correspond
+     * to the --add-exports and --add-opens command-line options:
+     *     Add-Exports: &lt;module&gt;/&lt;package&gt;( &lt;module&gt;/&lt;package&gt;)*
+     *     Add-Opens: &lt;module&gt;/&lt;package&gt;( &lt;module&gt;/&lt;package&gt;)*
+     *
+     * The value of each attribute is a space-separated list of slash-separated
+     * module-name/package-name pairs. A &gt;module&lt;/&gt;package&lt; pair in
+     * the value of an Add-Exports attribute has the same meaning as the
+     * command-line option --add-exports &gt;module&lt;/&gt;package&lt;=ALL-UNNAMED.
+     *
+     * A &gt;module&lt;/&gt;package&lt; pair in the value of an Add-Opens attribute has the
+     * same meaning as the command-line option --add-opens &gt;module&lt;/&gt;package&lt;=ALL-UNNAMED.
+     *
+     * Each attribute can occur at most once, in the main section of a MANIFEST.MF file.
+     * A particular pair can be listed more than once. If a specified module was not
+     * resolved, or if a specified package does not exist, then the corresponding pair
+     * is ignored.
+     */
+    private void openModules(ModuleLayer layer, Module self, SecureJar jar) throws NoSuchMethodException, SecurityException, IllegalAccessException, InvocationTargetException {
+        var manifest = jar.moduleDataProvider().getManifest();
+        var entry = manifest.getMainAttributes().getValue("Add-Opens");
+        if (entry != null)
+            addOpenOrExports(layer, self, true, entry);
+        entry = manifest.getMainAttributes().getValue("Add-Exports");
+        if (entry != null)
+            addOpenOrExports(layer, self, false, entry);
+    }
+
+    private void addOpenOrExports(ModuleLayer layer, Module self, boolean open, String entry) throws NoSuchMethodException, SecurityException, IllegalAccessException, InvocationTargetException {
+        for (var pair : entry.split(" ")) {
+            var pts = pair.trim().split("/");
+            if (pts.length == 2) {
+                var target = layer.findModule(pts[0]).orElse(null);
+                if (target == null || !target.getDescriptor().packages().contains(pts[1]))
+                    continue;
+                addOpenOrExport(target, pts[1], self, open);
+            }
+        }
+    }
+
+    private static Method implAddExportsOrOpens;
+    private static void addOpenOrExport(Module target, String pkg, Module reader, boolean open) throws NoSuchMethodException, SecurityException, IllegalAccessException, InvocationTargetException {
+        if (implAddExportsOrOpens == null) {
+            implAddExportsOrOpens = Module.class.getDeclaredMethod("implAddExportsOrOpens", String.class, Module.class, boolean.class, boolean.class);
+            UnsafeHacks.setAccessible(implAddExportsOrOpens);
+        }
+
+        LOGGER.info(LOADING, "{} {}/{} to {}", open ? "Opening" : "Exporting", target.getName(), pkg, reader.getName());
+        implAddExportsOrOpens.invoke(target, pkg, reader, open, /*syncVM*/true);
     }
 
     private static void onEventFailed(IEventBus iEventBus, Event event, IEventListener[] iEventListeners, int i, Throwable throwable) {
